--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
-    "name": "react-admin-lerna",
+    "name": "react-admin",
+    "version": "0.1.0",
     "scripts": {
         "build": "lerna run build",
         "watch": "lerna run --parallel watch",
